--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
 <link rel="stylesheet" href="" ="css/style.css">
 </head>
   <body>
-    <h1>site here</h1>
-    <p>добрый день</p>
-    <p>добрый вечер</p>
-  </body>
+    <p>В IT без программирования: история тестировщика</p>
+</body>
 </html>
